# Embedded-Machine-Learning

./: .gitignore  CMakeLists.txt  README.md  music_features_mfcc_test.csv  music_features_mfcc_train.csv  music_features_stft_test.csv
artificial_neural_network/: artificial_neural_network_mfcc.ipynb
artificial_neural_network/artificial_neural_network_mfcc/: artificial_neural_network_mfcc_history.txt  artificial_neural_network_mfcc_weights.h5  hidden_layer_1.csv  hidden_layer_2.csv
artificial_neural_network/artificial_neural_network_stft/: artificial_neural_network_stft.json  artificial_neural_network_stft_history.txt  hidden_layer_1.csv  hidden_layer_2.csv
datasets/: music_features_stft_train.csv
decision_tree/: cart_graph_mfcc  decision_tree_mfcc.ipynb  utils.py
demo/: extractor_demo.cpp  one_vs_one_svm_demo.cpp
docker/: toolchain.dockerfile
embedded_implementation/demo/: CMakeLists.txt  artificial_neural_network_demo.cpp  decision_tree_demo.cpp  random_forest_demo.cpp
embedded_implementation/extraction/: au_file_processor.cpp  au_file_processor.h
embedded_implementation/helpers/: classification_helpers.h  print_helpers.h
helpers/: file_helpers.h  globals.h.in  music_style_helpers.h  signal.h
ml_algorithms/: artificial_neural_network.h  decision_tree.h  machine_learning_model.h  one_vs_one_svm.h  random_forest.cpp
report/: DirectoryOrganisation.md  MachineLearningEmbedded.tex
support_vector_machine/: support_vector_machine_mfcc.csv  support_vector_machine_mfcc.ipynb  support_vector_machine_stft.csv  utils.py
(+156 files in other folders)
